# claw-mini

./: .env.example  .gitignore  README.md  README_zh.md  main.py  pyproject.toml
backend/: app.py
backend/graph/: agent.py
backend/memory/: MEMORY.example.md  memory_retriever.py  prompt_manager.py  session_manager.py
backend/skills/: SKILLS_SNAPSHOT.md  skills_manager.py
backend/skills/get_weather/: SKILL.md
backend/tools/: __init__.py  core_tools.py
backend/workspace/: AGENTS.md  IDENTITY.md  SOUL.md  USER.example.md
